force-app/main/default/objects/Settlement__c/Settlement__c.object-meta.xml
<CustomObject>
    <description>Object to store the data for Judgement</description>
    <label>Settlement</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Settlement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>