force-app/main/default/objects/Settlement__c/fields/Approved_By_text__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved By text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>