force-app/main/default/objects/Settlement__c/fields/Approved_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Approved Date Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>