force-app/main/default/objects/Settlement__c/fields/Customer_Email_address__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_address__c</fullName>
    <formula>IF(NOT( ISBLANK(Product__c)),( ( Product__r.Customer__r.PersonEmail))

, IF(NOT( ISBLANK( Judgment__c )), (( Judgment__r.Customer_Email_address__c ) ), &quot;&quot;) )</formula>
    <label>Customer Email address</label>
    <type>Text</type>
</CustomField>