force-app/main/default/objects/Settlement__c/fields/DebtNext_Settle_Id__c.field-meta.xml
<CustomField>
    <fullName>DebtNext_Settle_Id__c</fullName>
    <label>DebtNext Settle Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>