force-app/main/default/objects/Settlement__c/fields/Employment_Comments__c.field-meta.xml
<CustomField>
    <fullName>Employment_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employment Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>