force-app/main/default/objects/Settlement__c/fields/External_Collection_Agency_Identifier__c.field-meta.xml
<CustomField>
    <fullName>External_Collection_Agency_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>External Collection Agency Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>