force-app/main/default/objects/Settlement__c/fields/Homeowner_Status__c.field-meta.xml
<CustomField>
    <fullName>Homeowner_Status__c</fullName>
    <label>Homeowner Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>