force-app/main/default/objects/Settlement__c/fields/HomeOwner_Status_Comments__c.field-meta.xml
<CustomField>
    <fullName>HomeOwner_Status_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Homeowner Status Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>