force-app/main/default/objects/Settlement__c/fields/Inbound_API_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Inbound_API_Response_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inbound API Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>