force-app/main/default/objects/Settlement__c/fields/Judgment__c.field-meta.xml
<CustomField>
    <fullName>Judgment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judgment ID</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Post-Judgment-Vacated can&apos;t be linked to settlement</errorMessage>
        <filterItems>
            <field>Judgment__c.RecordType.Name</field>
            <operation>notEqual</operation>
            <value>Post-Judgment-Vacated</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Judgment__c</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>