force-app/main/default/objects/Settlement__c/fields/Judgment_Collection_Agency_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Collection_Agency_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Judgment Collection Agency Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>