force-app/main/default/objects/Settlement__c/fields/Judgment_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Judgment_Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>