force-app/main/default/objects/Settlement__c/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <description>Last_Modified_By</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Last_Modified_By</inlineHelpText>
    <label>Last_Modified_By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>