force-app/main/default/objects/Settlement__c/fields/Monthly_Expenses_Comments__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expenses_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Monthly Expenses Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>