force-app/main/default/objects/Settlement__c/fields/Original_seller__c.field-meta.xml
<CustomField>
    <fullName>Original_seller__c</fullName>
    <formula>Product__r.Originating_Creditor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original seller</label>
    <type>Text</type>
</CustomField>