force-app/main/default/objects/Settlement__c/fields/Outbound_API_Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Outbound_API_Request_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outbound API Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>