force-app/main/default/objects/Settlement__c/fields/Parent_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Type__c</fullName>
    <formula>IF( Product__c = Null, &apos;Judgment&apos;, &apos;Product&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Type</label>
    <type>Text</type>
</CustomField>