force-app/main/default/objects/Settlement__c/fields/Payment_Plan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Amount__c</fullName>
    <label>Payment Plan Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>