force-app/main/default/objects/Settlement__c/fields/Payment_Plan_Length__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Length__c</fullName>
    <label>Payment Plan Length</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>