force-app/main/default/objects/Settlement__c/fields/Placement_Formula__c.field-meta.xml
<CustomField>
    <fullName>Placement_Formula__c</fullName>
    <formula>Placement__r.Agency_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Display Placement Name
This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Agency Name</label>
    <type>Text</type>
</CustomField>