force-app/main/default/objects/Settlement__c/fields/Placement_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Placement_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Placement_Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>