force-app/main/default/objects/Settlement__c/fields/Placement_Text_Id__c.field-meta.xml
<CustomField>
    <fullName>Placement_Text_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>