force-app/main/default/objects/Settlement__c/fields/Principal_Balance__c.field-meta.xml
<CustomField>
    <fullName>Principal_Balance__c</fullName>
    <formula>IF(NOT( ISBLANK(Product__c)),( ( Product__r.Current_Principal_Balance__c ))

, IF(NOT( ISBLANK( Judgment__c )), (( Judgment__r.Current_Principal_Balance__c ) ), 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Principal Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>