force-app/main/default/objects/Settlement__c/fields/Product_Collection_Agency_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Product_Collection_Agency_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field is used for Distressed Accounts Only</inlineHelpText>
    <label>Product Collection Agency Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>