force-app/main/default/objects/Settlement__c/fields/Proposal_Principal_Percent__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Principal_Percent__c</fullName>
    <formula>IF(NOT( ISBLANK(Product__c)),((Proposal_Amount__c /  Product__r.Current_Principal_Balance__c )),  
IF(NOT( ISBLANK( Judgment__c )), ((Proposal_Amount__c /   Judgment__r.Current_Principal_Balance__c  ) ), 0) )</formula>
    <inlineHelpText>Proposal Principal %</inlineHelpText>
    <label>Proposal Principal %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>