force-app/main/default/objects/Settlement__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <formula>TEXT(Product__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Province</label>
    <type>Text</type>
</CustomField>