force-app/main/default/objects/Settlement__c/fields/Rejected_By_Text__c.field-meta.xml
<CustomField>
    <fullName>Rejected_By_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejected By Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>