force-app/main/default/objects/Settlement__c/fields/Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejected Date</label>
    <type>DateTime</type>
</CustomField>