force-app/main/default/objects/Settlement__c/fields/Required_Amount__c.field-meta.xml
<CustomField>
    <fullName>Required_Amount__c</fullName>
    <label>Required Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>