force-app/main/default/objects/Settlement__c/fields/Required_Total_Percent__c.field-meta.xml
<CustomField>
    <fullName>Required_Total_Percent__c</fullName>
    <formula>IF(NOT( ISBLANK(Product__c)), (( Required_Amount__c  /  Product__r.Current_Balance__c )  )
, 
IF(NOT(ISBLANK(Judgment__c)), ((Required_Amount__c  /  (   Judgment__r.Current_Principal_Balance__c  +  Judgment__r.Current_Interest_Balance__c +  Judgment__r.NSF_Fees__c )  ) ), 0) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Total %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>