force-app/main/default/objects/Settlement__c/fields/Savings_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Savings_Percentage__c</fullName>
    <formula>ROUND(((  Total_Saving__c  * 100)  /   Total_balance__c ),2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>