force-app/main/default/objects/Settlement__c/fields/Settlement_complete_date__c.field-meta.xml
<CustomField>
    <fullName>Settlement_complete_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Settlement complete date</label>
    <type>Date</type>
</CustomField>