force-app/main/default/objects/Settlement__c/fields/Settlement_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Settlement_External_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Settlement External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>