force-app/main/default/objects/Settlement__c/fields/Settlement_Number__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Number__c</fullName>
    <description>Settlement Number to sync between portal and salesforce</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Settlement Number to sync between portal and salesforce</inlineHelpText>
    <label>Settlement Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>