force-app/main/default/objects/Settlement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>More Info required</fullName>
            </value>
            <value>
                <fullName>Ready for review</fullName>
                <default>true</default>
                <label>Ready for review</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
            <value>
                <fullName>Counter offer proposed</fullName>
            </value>
            <value>
                <fullName>Counter offer accepted</fullName>
            </value>
            <value>
                <fullName>Acknowledged by agency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>