force-app/main/default/objects/Settlement__c/fields/Total_balance__c.field-meta.xml
<CustomField>
    <fullName>Total_balance__c</fullName>
    <formula>IF(NOT( ISBLANK(Product__c)),( (Product__r.Current_Balance__c ))

, IF(NOT( ISBLANK( Judgment__c )), (( Judgment__r.Current_Total_Balance__c ) ), 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>