force-app/main/default/objects/Settlement__c/fields/Total_Saving__c.field-meta.xml
<CustomField>
    <fullName>Total_Saving__c</fullName>
    <formula>IF(NOT(ISBLANK(Total_balance__c)),  Total_balance__c - Required_Amount__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Saving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>