force-app/main/default/objects/Settlement__c/fields/Total_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Total_Wealth__c</fullName>
    <label>Total Wealth</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>