force-app/main/default/objects/Settlement__c/fields/Total_Wealth_Comments__c.field-meta.xml
<CustomField>
    <fullName>Total_Wealth_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Wealth Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>