force-app/main/default/objects/Settlement__c/fields/Value_Tier__c.field-meta.xml
<CustomField>
    <fullName>Value_Tier__c</fullName>
    <formula>TEXT( Product__r.Value_Tier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Tier</label>
    <type>Text</type>
</CustomField>