force-app/main/default/objects/Settlement__c/recordTypes/Judgment.recordType-meta.xml
<RecordType>
    <fullName>Judgment</fullName>
    <active>true</active>
    <label>Judgment</label>
</RecordType>