force-app/main/default/objects/Settlement__c/validationRules/Assign_only_to_one_parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Assign_only_to_one_parent</fullName>
    <active>false</active>
    <description>Settlement record cannot be linked to both Judgement and Product records</description>
    <errorConditionFormula>(
IF(ISBLANK( Judgment__c ), 0,1)+
IF(ISBLANK( Product__c ), 0,1)
)  &lt;&gt;  1</errorConditionFormula>
    <errorMessage>Settlement cannot be linked to both Judgement and Product records</errorMessage>
</ValidationRule>