force-app/main/default/objects/Settlement__c/validationRules/Assigning_either_product_or_judgment.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigning_either_product_or_judgment</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK( Product__c ) , ISBLANK( Judgment__c ) )</errorConditionFormula>
    <errorMessage>Settlement record cannot be created without adding product or judgment</errorMessage>
</ValidationRule>