force-app/main/default/objects/Settlement__c/validationRules/Assigning_only_to_one_parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Assigning_only_to_one_parent</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISBLANK( Product__c ) ) ,NOT(ISBLANK(  Judgment__c )))</errorConditionFormula>
    <errorMessage>One Settlement record cannot be linked to both Product and Judgment</errorMessage>
</ValidationRule>