force-app/main/default/objects/Settlement__c/validationRules/collector_paralegal_status_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>collector_paralegal_status_restriction</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR($Profile.Name=&apos;CFG - Distressed Collection&apos;,$Profile.Name=&apos;CFG-Distressed ParaLegal Only&apos;) , OR( ISPICKVAL( Status__c , &apos;More Info required&apos;) ,ISPICKVAL( Status__c , &apos;Approved&apos;),ISPICKVAL( Status__c , &apos;Rejected&apos;)) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You cannot set the status to More info required, Approved and Rejected.</errorMessage>
</ValidationRule>