force-app/main/default/objects/Settlement__c/validationRules/Payment_Plan_Length_accepts_only_numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Plan_Length_accepts_only_numeric</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS(TEXT(Payment_Plan_Length__c), &apos;.&apos;)</errorConditionFormula>
    <errorDisplayField>Payment_Plan_Length__c</errorDisplayField>
    <errorMessage>Payment Plan Length accepts only numericals. Please do not enter decimals</errorMessage>
</ValidationRule>