force-app/main/default/objects/Settlement__c/validationRules/Payment_plan_Length_should_not_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_plan_Length_should_not_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Payment_Plan_Length__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Payment_Plan_Length__c</errorDisplayField>
    <errorMessage>Payment Plan Length cannot not be a negative value</errorMessage>
</ValidationRule>