force-app/main/default/objects/Settlement__c/validationRules/Read_Only_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Read_Only_Fields</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
(CONTAINS(Settlement_Number__c,&quot;SA&quot;)),
NOT(CONTAINS(Last_Modified_By__c,&quot;@&quot;)),
 (OR(
ISCHANGED(Product__c),ISCHANGED(Approved_Date_Text__c),
ISCHANGED(Rejected_Date_Text__c),
ISCHANGED(Employment__c),ISCHANGED(Homeowner_Status__c),
ISCHANGED(Employment_Comments__c),
ISCHANGED(HomeOwner_Status_Comments__c),
ISCHANGED(Monthly_Income__c),ISCHANGED(Monthly_Expenses__c),
ISCHANGED(Monthly_Income_Comments__c),
ISCHANGED(Monthly_Expenses_Comments__c),
ISCHANGED(Total_Wealth__c),ISCHANGED(Total_Wealth_Comments__c)
) )
)</errorConditionFormula>
    <errorMessage>The field will not change because settlement created by Portal</errorMessage>
</ValidationRule>