force-app/main/default/objects/Settlement__c/validationRules/Restrict_record_creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_record_creation</fullName>
    <active>false</active>
    <description>Restricting record creation for all users associated with distressed profiles</description>
    <errorConditionFormula>AND( OR( $Profile.Name  = &apos;CFG - Distressed Collection&apos;,$Profile.Name  = &apos;CFG -Distressed Team Lead&apos;,
$Profile.Name  = &apos;CFG-Distressed ParaLegal Only&apos;) 
,ISNEW() )</errorConditionFormula>
    <errorMessage>You cannot create a settlement record</errorMessage>
</ValidationRule>