force-app/main/default/objects/Settlement__c/validationRules/Restrict_values_for_collector_and_para.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_values_for_collector_and_para</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR($Profile.Name=&apos;CFG - Distressed Collection&apos;,$Profile.Name=&apos;CFG-Distressed ParaLegal Only&apos;) , OR(  ISPICKVAL( Status__c , &apos;More Info required&apos;) ,ISPICKVAL( Status__c , &apos;Approved&apos;),ISPICKVAL( Status__c , &apos;Rejected&apos;)) )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Restricted usage of access</errorMessage>
</ValidationRule>